# polyexamples

./: README.md
scripts/: genfiles.sh  runperf.sh
shape-small-concepts/: CMakeLists.txt
shape-small-concepts/include/: shape.h
shape-small-object/: CMakeLists.txt
shape-small-object/app/: CMakeLists.txt  area.cpp
shape-small-object/include/: scene.h  shape.h
shape-type-erased/app/: genscene.cpp
shape-type-erased/include/: circle.h  rectangle.h  shape.h
shape-type-erased/src/: rectangle.cpp
shape/app/: enlarge.cpp  translate.cpp
shape/include/: rectangle.h  scene.h
shape/src/: CMakeLists.txt  rectangle.cpp  scene.cpp
shapegen/app/: area.cpp  area.cpp.bak  enlarge.cpp  genscene.cpp  genscene.cpp.bak  move.cpp  move.cpp.bak  resize.cpp  resize.cpp.bak  translate.cpp
shapegen/include/: circle.h  rectangle.h  scene.h
shapegen/src/: CMakeLists.txt  circle.cpp
shapehgen/app/: area.cpp  move.cpp  resize.cpp
shapehgen/include/: .shape.h.swp  circle.h  rectangle.h  scene.h  shape.h
shapehgen/src/: CMakeLists.txt  circle.cpp  scene.cpp
shapehgenopt/app/: CMakeLists.txt  enlarge.cpp  move.cpp
shapehgenopt/include/: .scene.h.swp  circle.h  rectangle.h  scene.h  shape.h
shapehgenopt/src/: scene.cpp
shapeoo/app/: area.cpp  enlarge.cpp  genscene.cpp  genscene.cpp.bak  translate.cpp
shapeoo/include/: circle.h  rectangle.h  scene.h  shape.h
shapeoo/src/: CMakeLists.txt  circle.cpp  rectangle.cpp  scene.cpp  shape.cpp
